# api/docs/swagger.json
@@ -23,11 +23,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -270,11 +265,6 @@
                 ],
                 "summary": "ListArchive",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
                     {
                         "type": "string",
                         "name": "limit",
@@ -843,11 +833,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -864,6 +849,16 @@
                     {
                         "type": "string",
                         "name": "value",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "name",
+                            "description"
+                        ],
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -1092,11 +1087,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -1113,6 +1103,23 @@
                     {
                         "type": "string",
                         "name": "value",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "first_name",
+                            "last_name",
+                            "gender",
+                            "phone_number",
+                            "email",
+                            "address",
+                            "city",
+                            "country",
+                            "biography"
+                        ],
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -1292,11 +1299,6 @@
                 ],
                 "summary": "ListDoctorNotes",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
                     {
                         "type": "string",
                         "name": "limit",
@@ -1543,11 +1545,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -1559,11 +1556,6 @@
                     {
                         "type": "string",
                         "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "value",
                         "in": "query"
                     }
                 ],
@@ -1790,11 +1782,6 @@
                 ],
                 "summary": "ListDoctorTimes",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
                     {
                         "type": "string",
                         "name": "limit",
@@ -2041,11 +2028,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -2062,6 +2044,15 @@
                     {
                         "type": "string",
                         "name": "value",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "day_of_week"
+                        ],
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -2337,11 +2328,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -2416,13 +2402,13 @@
                             "department",
                             "reasons",
                             "specialization",
-                            "doctor"
+                            "doctor",
+                            "user"
                         ],
                         "type": "string",
                         "description": "bucket",
                         "name": "bucketName",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2461,11 +2447,6 @@
                 ],
                 "summary": "ListPatient",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
                     {
                         "type": "string",
                         "name": "limit",
@@ -2763,11 +2744,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -2784,6 +2760,15 @@
                     {
                         "type": "string",
                         "name": "value",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "name"
+                        ],
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -3098,11 +3083,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "field",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "limit",
                         "in": "query"
                     },
@@ -3125,6 +3105,16 @@
                         "type": "string",
                         "description": "department_id",
                         "name": "department_id",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "name",
+                            "description"
+                        ],
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -4542,7 +4532,7 @@
                 "count": {
                     "type": "integer"
                 },
-                "doctor_services": {
+                "doctorServices": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model_healthcare_service.DoctorServicesRes"
