# api/handlers/v1/doctor.go
@@ -151,12 +151,13 @@ func (h *HandlerV1) GetDoctor(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param ListReq query models.ListReq false "ListReq"
+// @Param search query string false "search" Enums(first_name, last_name, gender, phone_number, email, address, city, country, biography) "search"
 // @Success 200 {object} model_healthcare_service.ListDoctors
 // @Failure 400 {object} model_common.StandardErrorModel
 // @Failure 500 {object} model_common.StandardErrorModel
 // @Router /v1/doctor [get]
 func (h *HandlerV1) ListDoctors(c *gin.Context) {
-	field := c.Query("field")
+	search := c.Query("search")
 	value := c.Query("value")
 	limit := c.Query("limit")
 	page := c.Query("page")
@@ -171,7 +172,7 @@ func (h *HandlerV1) ListDoctors(c *gin.Context) {
 	defer cancel()
 
 	doctors, err := h.serviceManager.HealthcareService().DoctorService().GetAllDoctors(ctx, &pb.GetAllDoctorS{
-		Field:    field,
+		Field:    search,
 		Value:    value,
 		IsActive: false,
 		Page:     int64(pageInt),
@@ -211,7 +212,7 @@ func (h *HandlerV1) ListDoctors(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, model_healthcare_service.ListDoctors{
-		Count:   int32(doctors.Count),
+		Count:   doctors.Count,
 		Doctors: doctorsRes.Doctors,
 	})
 }
