# api/handlers/v1/reasons.go
@@ -105,19 +105,20 @@ func (h *HandlerV1) GetReasons(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param ListReq query models.ListReq false "ListReq"
+// @Param search query string false "search" Enums(name) "search"
 // @Success 200 {object} model_healthcare_service.ListReasons
 // @Failure 400 {object} model_common.StandardErrorModel
 // @Failure 500 {object} model_common.StandardErrorModel
 // @Router /v1/reasons [get]
 func (h *HandlerV1) ListReasons(c *gin.Context) {
-	field := c.Query("field")
+	search := c.Query("search")
 	value := c.Query("value")
 	limit := c.Query("limit")
 	page := c.Query("page")
 	orderBy := c.Query("orderBy")
 
 	pageInt, limitInt, err := e.ParseQueryParams(page, limit)
-	if e.HandleError(c, err, h.log, http.StatusInternalServerError, "ListReasons") {
+	if e.HandleError(c, err, h.log, http.StatusBadRequest, "ListReasons") {
 		return
 	}
 
@@ -125,7 +126,7 @@ func (h *HandlerV1) ListReasons(c *gin.Context) {
 	defer cancel()
 
 	reasons, err := h.serviceManager.HealthcareService().ReasonsService().GetAllReasons(ctx, &pb.GetAllReas{
-		Field:    field,
+		Field:    search,
 		Value:    value,
 		IsActive: false,
 		Page:     int32(pageInt),
